--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Pre Configure
         run: autoreconf --install
+      - name: Pre Build
+        run: ./macpb
       - name: Configure
         run: ./configure
       - name: Make
