chore(ci): add permission for build script
- Added x for macpb script.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Pre Configure
         run: autoreconf --install
       - name: Pre Build
-        run: ./macpb
+        run: chmod +x ./macpb && ./macpb
       - name: Configure
         run: ./configure
       - name: Make
