--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Install Deps
         uses: awalsh128/cache-apt-pkgs-action@v1.2.1
         with:
-          packages: libssl-dev libuv1-dev gcc-10 g++-12 make zlib1g-dev libgtk-3-dev libwebkit2gtk-4.0-dev
-          version: 1.0
+          packages: libssl-dev libuv1-dev gcc-10 g++-12 make zlib1g-dev libgtk-3-dev libwebkit2gtk-4.0-dev pkg-config
+          version: 2.0
       - uses: actions/checkout@v3
       - name: Pre Configure
         run: autoreconf --install
