--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,20 @@ jobs:
         with:
           packages: libssl-dev libuv1-dev gcc-10 g++-12 make zlib1g-dev libgtk-3-dev libwebkit2gtk-4.0-dev pkg-config
           version: 2.0
+      - uses: actions/setup-node@v3
       - uses: actions/checkout@v3
+      - name: Install Yarn
+        run: sudo npm install -g yarn
+      - name: Install Packages
+        run: yarn install
       - name: Pre Configure
         run: autoreconf --install
       - name: Configure
         run: ./configure
       - name: Make
         run: make -j4 CC=gcc-10 CXX=g++-12 LD=g++-12 CPP=g++-12
+      - name: Build Frontend
+        run: chmod +x ./jsbuild && ./jsbuild
       - name: Run Tests
         run: make check
 
@@ -33,7 +40,12 @@ jobs:
         uses: ConorMacBride/install-package@v1
         with:
           brew: gcc libuv make automake openssl@1.1 autoconf
+      - uses: actions/setup-node@v3
       - uses: actions/checkout@v3
+      - name: Install Yarn
+        run: sudo npm install -g yarn
+      - name: Install Packages
+        run: yarn install
       - name: Pre Configure
         run: autoreconf --install
       - name: Pre Build
@@ -42,6 +54,8 @@ jobs:
         run: ./configure
       - name: Make
         run: gmake -j6 CC=gcc-12 CXX=g++-12 LD=g++-12 CPP=g++-12 LDFLAGS="-L/usr/local/opt/openssl@1.1/lib" CPPFLAGS="-I/usr/local/opt/openssl@1.1/include"
+      - name: Build Frontend
+        run: chmod +x ./jsbuild && ./jsbuild
       - name: Run Tests
         run: gmake check
 
@@ -64,12 +78,19 @@ jobs:
             mingw-w64-x86_64-gcc
             mingw-w64-x86_64-openssl
             mingw-w64-x86_64-zlib
+      - uses: actions/setup-node@v3
       - uses: actions/checkout@v3
+      - name: Install Yarn
+        run: sudo npm install -g yarn
+      - name: Install Packages
+        run: yarn install
       - name: Pre Configure
         run: autoreconf --install
       - name: Configure
         run: ./configure
       - name: Make
         run: make -j4 CC=cc CXX=c++ LD=c++ CPP=c++
+      - name: Build Frontend
+        run: chmod +x ./jsbuild && ./jsbuild
       - name: Run Tests
         run: make check
