feat(ui): add controller for ui
- Created a new language for UI controlling.
- Added vm for interpreting ui lang.
- Added example home ui.
- Added locale file for zh-CN.
- Updated Makefile.

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ inc/wv.hh -linguist-vendored
 inc/log.hh -linguist-vendored
 src/uic/components/ImgSrc.ts linguist-vendored
 *.tsx linguist-language=ts
+*.a2s linguist-language=asm
