--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,6 @@ inc/**/* linguist-vendored
 inc/ach/**/* -linguist-vendored
 inc/wv.hh -linguist-vendored
 inc/log.hh -linguist-vendored
-src/uic/components/ImgSrc.ts linguist-vendored
+src/uic/components/ImgSrc.tsx linguist-vendored
 *.tsx linguist-language=ts
 *.a2s linguist-language=asm
