--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Packages
         run: yarn install
+      - name: Download Binaries
+        run: chmod +x ./shigure && bash ./shigure setup
       - name: Pre Configure
         run: autoreconf --install
       - name: Configure
@@ -45,6 +47,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Packages
         run: yarn install
+      - name: Download Binaries
+        run: chmod +x ./shigure && ./shigure setup
       - name: Pre Configure
         run: autoreconf --install
       - name: Pre Build
@@ -82,6 +86,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Packages
         run: yarn install
+      - name: Download Binaries
+        run: chmod +x ./shigure && ./shigure setup
       - name: Pre Configure
         run: autoreconf --install
       - name: Configure
